# mainframe

./: Cargo.toml  README.md  Taskfile.yml
.github/workflows/: pipeline.yaml  publish.yaml
src/: cli.rs  errors.rs  lib.rs  main.rs  panic_handler.rs  ringbuffer.rs
src/app/: app.rs  events.rs  mod.rs  old.rs
src/display/: bar_chart.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  state.rs  ui.rs  util.rs
src/display/old/: graph.rs  old.rs
src/display/pages/: disk.rs  home.rs  mod.rs  usage.rs
src/monitoring/: cpu.rs  metric.rs  mod.rs  monitor.rs  monitoring.rs  polling.rs  ringbuffer.rs  sysinfo_monitor.rs  sysinfo_poller.rs  sysinfo_shim.rs  system.rs
