[package]
name = "mainframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
bitflags = "2.4.2"
color-eyre = "0.6.2"
crossterm = {version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
human_bytes = "0.4.3"
itertools = "0.12.1"
machine-info = "1.0.9"
num-traits = "0.2.17"
nvml-wrapper = "0.10.0"
ratatui = "0.25.0"
scopeguard = "1.2.0"
serde = "1.0.196"
serde_derive = "1.0.196"
sysinfo = "0.30.5"
systemstat = "0.2.3"
tokio = {version = "1.35.1", features = ["full"]}
tokio-util = "0.7.10"
tui-scrollview = "0.2.1"
