[package]
name = "mainframe"
version = "0.1.0"
edition = "2021"
exclude = [
    ".github/*"
]

[dependencies]
better-panic = "0.3.0"
bitflags = "2.4.2"
clap = { version = "4.5.0", features = ["derive"] }
crossterm = {version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
human_bytes = "0.4.3"
itertools = "0.12.1"
nvml-wrapper = "0.10.0"
ratatui = "0.25.0"
scopeguard = "1.2.0"
sysinfo = "0.30.5"
systemstat = "0.2.3"
tokio = {version = "1.35.1", features = ["full"]}
tokio-util = "0.7.10"
